Port to 1.16.5 (Fabric and Forge)
Java 8, no Parchment. Structures are StructureFeatures (minecraft:village): 1.16.5
has no structure tags, and the per-biome village variants are configured features
the structure search cannot be pointed at, so the config lists take structure IDs.
A '#namespace:name' entry from a newer config is read as the ID namespace:name.
The vanilla fallback is StructureFeature.VILLAGE, and "will it ever generate" asks
the chunk generator's structure settings and the biome source's biomes.

Forge 1.16.5's official mapping channel keeps MCP's class names with Mojang's
member names, so the Forge module no longer consumes :common directly:
forge/build.gradle copies the common sources into build/generated/mcpCommon with
the class names translated (a table in that file) and compiles the copy. The
source-set output merge the newer branches use for the dev client is left out
because FML 36 cannot discover @Mod from the merged directory.

Two 1.16.5 runtime differences the compile does not catch: a fully generated chunk
only keeps the post-worldgen heightmaps (OCEAN_FLOOR replaces OCEAN_FLOOR_WG, same
predicate), and BlockPos.toShortString() is client-only, so the log line formats
the coordinates itself. Cloth Config 4.17.101, Fabric API 0.42.0+1.16, Forge 36.2.42.